# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  example.pre-commit-config.yaml  setup.cfg
.github/workflows/: lint.yaml
pre_commit_hooks/: check_for_go_fips_test.py  check_pipeline_name_only_steps.py  shellcheck_run_steps.py
scripts/: check-for-epoch-bump.sh  check-restored-packages.sh
test-data/: README.md  pipeline-name-only-bad.yaml  pipeline-name-only-good.yaml
