[metadata]
name = pre_commit_hooks
version = 0.0.1
description = chainguard hooks for pre-commit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chainguard-dev/pre-commit-hooks
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
python_requires = >=3.9

[options.entry_points]
console_scripts =
    shellcheck-run-steps = pre_commit_hooks.shellcheck_run_steps:main
    check-for-go-fips-test = pre_commit_hooks.check_for_go_fips_test:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
